[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "amex-default"
version = "0.1.0"
description = "AMEX default prediction project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2",
    "lightgbm>=4.5",
    "numpy>=2.0",
    "optuna>=4.0",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "scikit-learn>=1.6",
]

[project.optional-dependencies]
test = ["pytest>=8.3"]
notebook = [
    "ipykernel>=6.29",
    "jupyterlab>=4.3",
    "matplotlib>=3.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"